--- a/Pages/Admin/users.html
+++ b/Pages/Admin/users.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users</title>
-    <link rel="stylesheet" href="../styles/admin/users.css">
-    <link rel="stylesheet" href="../styles/responsive/admin/users-responsive.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/admin/users.css" />
+    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image.png" type="image/png">
+
+  </head>
+  <body>
     <h1>Users Page</h1>
     <script src="../scripts/admin/users.js"></script>
-</body>
+  </body>
 </html>
