--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actors</title>
     <link rel="stylesheet" href="../styles/admin/actors.css">
-    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image.png" type="image/png">
+    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 </head>
 <body>
     <h1>Actors Page</h1>
