--- a/Pages/Admin/comments.html
+++ b/Pages/Admin/comments.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comments</title>
     <link rel="stylesheet" href="../styles/admin/comments.css" />
-    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image.png" type="image/png">
+    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
+
+    
 
   </head>
   <body>
