--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details-1</title>
     <link rel="stylesheet" href="../styles/client/details-1.css" />
-    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image.png" type="image/png">
+    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
+
 
   </head>
   <body>
