--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actors</title>
-    <link rel="stylesheet" href="../styles/admin/actors.css">
+    <link rel="stylesheet" href="/Styles/Admin/actors.css">
     <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 </head>
 <body>
