--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Categories</title>
-    <link rel="stylesheet" href="../styles/admin/categories.css" />
+    <link rel="stylesheet" href="../../Styles/Admin/categories.css" />
     <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 
 
