--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../styles/client/login.css" />
+    <link rel="stylesheet" href="/Styles/Client/login.css" />
     <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 
   </head>
