--- a/Pages/Admin/contactus.html
+++ b/Pages/Admin/contactus.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Contactus Page</h1>
-    <script src="../scripts/admin/contactus.js"></script>
+    <script src="/Scripts/Admin/contactus.js"></script>
   </body>
 </html>
