--- a/Pages/Client/home.html
+++ b/Pages/Client/home.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Home Page</h1>
-    <script src="../scripts/client/home.js"></script>
+    <script src="/Scripts/Client/home.js"></script>
   </body>
 </html>
