--- a/Pages/Client/landing-page.html
+++ b/Pages/Client/landing-page.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Landing-page Page</h1>
-    <script src="../scripts/client/landing-page.js"></script>
+    <script src="/Scripts/Client/landing-page.js"></script>
   </body>
 </html>
