--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Actors Page</h1>
-    <script src="../scripts/admin/actors.js"></script>
+    <script src="/Scripts/Admin/actors.js"></script>
 </body>
 </html>
