--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Categories</title>
-    <link rel="stylesheet" href="../../Styles/Admin/categories.css" />
+    <link rel="stylesheet" href="/Styles/Admin/categories.css" />
     <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 
 
   </head>
   <body>
     <h1>Categories Page</h1>
-    <script src="../scripts/admin/categories.js"></script>
+    <script src="/Scripts/Admin/categories.js"></script>
   </body>
 </html>
