--- a/Pages/Admin/comments.html
+++ b/Pages/Admin/comments.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>Comments Page</h1>
-    <script src="../scripts/admin/comments.js"></script>
+    <script src="/Scripts/Admin/comments.js"></script>
   </body>
 </html>
