--- a/Pages/Admin/dashboard.html
+++ b/Pages/Admin/dashboard.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Dashboard Page</h1>
-    <script src="../scripts/admin/dashboard.js"></script>
+    <script src="/Scripts/Admin/dashboard.js"></script>
   </body>
 </html>
