--- a/Pages/Admin/login.html
+++ b/Pages/Admin/login.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Login Page</h1>
-    <script src="../scripts/admin/login.js"></script>
+    <script src="/Scripts/Admin/login.js"></script>
   </body>
 </html>
