--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Movies Page</h1>
-    <script src="../scripts/admin/movies.js"></script>
+    <script src="/Scripts/Admin/movies.js"></script>
   </body>
 </html>
