--- a/Pages/Admin/users.html
+++ b/Pages/Admin/users.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Users Page</h1>
-    <script src="../scripts/admin/users.js"></script>
+    <script src="/Scripts/Admin/users.js"></script>
   </body>
 </html>
