--- a/Pages/Client/404.html
+++ b/Pages/Client/404.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>404 Page</h1>
-    <script src="../scripts/client/404.js"></script>
+    <script src="/Scripts/Client/404.js"></script>
   </body>
 </html>
