--- a/Pages/Client/account.html
+++ b/Pages/Client/account.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Account Page</h1>
-    <script src="../scripts/client/account.js"></script>
+    <script src="/Scripts/Client/account.js"></script>
   </body>
 </html>
