--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Details-1 Page</h1>
-    <script src="../scripts/client/details-1.js"></script>
+    <script src="/Scripts/Client/details.js"></script>
   </body>
 </html>
