--- a/Pages/Client/favorite.html
+++ b/Pages/Client/favorite.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1>Favorite Page</h1>
-    <script src="../scripts/client/favorite.js"></script>
+    <script src="/Scripts/Client/favorite.js"></script>
   </body>
 </html>
