--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Login Page</h1>
-    <script src="../scripts/client/login.js"></script>
+    <script src="/Scripts/Client/login.js"></script>
   </body>
 </html>
