--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Register Page</h1>
-    <script src="../scripts/client/register.js"></script>
+    <script src="/Scripts/Client/register.js"></script>
   </body>
 </html>
