--- a/Pages/Client/search.html
+++ b/Pages/Client/search.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Search Page</h1>
-    <script src="../scripts/client/search.js"></script>
+    <script src="/Scripts/Client/search.js"></script>
   </body>
 </html>
