--- a/Pages/Admin/login.html
+++ b/Pages/Admin/login.html
@@ -5,12 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="/Styles/Admin/login.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
-
-
+    <link
+      rel="icon"
+      href="/Assets/images/logo_with_uploaded_image (1).png"
+      type="image/png"
+    />
   </head>
   <body>
-    <h1>Login Page</h1>
+    <div class="login-container">
+      <img src="/Assets/images/Login_logo.svg" alt="Logo" />
+      <h1>Admin</h1>
+      <form>
+        <div class="form-group">
+          <div>
+            <img
+              src="/Assets/icons/login/login_messages.svg"
+              alt="username"
+              class="input-icon"
+            />
+          </div>
+          <div>
+            <input type="text" placeholder="username" required />
+          </div>
+        </div>
+        <div class="form-group">
+          <img
+            src="/Assets/icons/login/login_password.svg"
+            alt="password"
+            class="input-icon"
+          />
+          <input type="password" placeholder="password" required />
+          <img
+            src="/Assets/icons/login/login_password_right.svg"
+            alt="password-right"
+            class="input-icon"
+          />
+        </div>
+        <button type="submit" class="login-btn">login</button>
+      </form>
+    </div>
     <script src="/Scripts/Admin/login.js"></script>
   </body>
 </html>
