started client login

--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/Styles/Client/login.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
-
+    <link rel="stylesheet" href="../../Styles/Client/login.css" />
+    <link
+      rel="icon"
+      href="/Assets/images/logo_with_uploaded_image (1).png"
+      type="image/png"
+    />
   </head>
-  <body>
-    <h1>Login Page</h1>
+  <body class="bg-dark text-light">
+    <main class="client-login">
+      <div class="side-bar">
+        <figure>
+          <img
+            src="../../Assets/images/logo_with_uploaded_image (1).png"
+            alt=" filmalisaLogo"
+          />
+        </figure>
+
+        <nav class="logo_links">
+          <a href=""
+            ><img src="../../Assets/icons/home.svg" alt="" />
+            </a>
+          <a href=""><img src="../../Assets/icons/movie.svg" alt=""
+          /></a>
+          <a href=""><img src="../../Assets/icons/tv.svg" alt="" /></a>
+          <a href=""><img src="../../Assets/icons/favorite.svg" alt="" /></a>
+        </nav>
+      </div>
+    </main>
+
     <script src="/Scripts/Client/login.js"></script>
   </body>
 </html>
