--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="profile">
-          <button class="button">
+          <button class="button" id="createButton" onclick="openModal()">
             <span class="button-span">Create</span>
           </button>
           <img
@@ -129,7 +129,6 @@
         </table>
       </div>
     </div>
-
     <script src="/Scripts/Admin/movies.js"></script>
   </body>
 </html>
