Client page updated

--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -68,6 +68,10 @@
               class="input-icon"
             />
           </div>
+          <nav >
+            <a href="/Pages/Client/register.html">Register here</a>
+          </nav>
+
           <button type="submit" class="login-btn">login</button>
         </form>
       </div>
