admin-user finish (html,css)

--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -5,91 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="/Styles/Client/register.css" />
-    <link
-      rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
-      type="image/png"
-    />
+    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
+
   </head>
-  <body class="bg-dark text-light">
-    <main class="client-login">
-      <div class="side-bar">
-        <figure>
-          <img
-            src="../../Assets/images/logo_with_uploaded_image (1).png"
-            alt=" filmalisaLogo"
-            class="main-logo"
-          />
-        </figure>
-
-        <nav class="logo_links">
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
-          </a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
-          /></a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
-          /></a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
-          /></a>
-        </nav>
-      </div>
-      <div class="right-part">
-        <img src="../../Assets/icons/Client-login/mainlogo.svg" alt="" />
-        <h1>filmalisa</h1>
-
-        <h2>register</h2>
-        <form>
-          <div class="form-group">
-            <img
-              src="/Assets/icons/Client-login/lpassword-icon.svg"
-              alt="password"
-              class="input-icon"
-            />
-            <input type="password" placeholder="fullname" required />
-            <img
-              src="/Assets/icons/Client-login/right-icon.svg"
-              alt="fullname-right"
-              class="input-icon"
-            />
-          </div>
-          <div class="form-group">
-            
-            <div>
-              <img
-                src="/Assets/icons/Client-login/left-icon.svg"
-                alt="email"
-                class="input-icon"
-              />
-            </div>
-            <div>
-              <input type="text" placeholder="email" required />
-            </div>
-          </div>
-          <div class="form-group">
-            <img
-              src="/Assets/icons/Client-login/lpassword-icon.svg"
-              alt="password"
-              class="input-icon"
-            />
-            <input type="password" placeholder="password" required />
-            <img
-              src="/Assets/icons/Client-login/right-icon.svg"
-              alt="password-right"
-              class="input-icon"
-            />
-          </div>
-          <nav>
-            <a href="/Pages/Client/login.html">Do you have an account? Login here</a>
-          </nav>
-
-          <button type="submit" class="register-btn">register</button>
-        </form>
-      </div>
-    </main>
+  <body>
+    <h1>Register Page</h1>
     <script src="/Scripts/Client/register.js"></script>
   </body>
 </html>
