--- a/Pages/Admin/contactus.html
+++ b/Pages/Admin/contactus.html
@@ -70,6 +70,14 @@
           />
           <span class="menu-text movie">Contact us</span>
         </li>
+        <li class="menu-item hover1">
+          <img
+            src="/Assets/icons/dashboard/dashboard-user.svg"
+            alt="Contact Icon"
+            class="menu-icon"
+          />
+          <span class="menu-text">Actors</span>
+        </li>
       </ul>
       <div class="logout-div">
         <img
