--- a/Pages/Admin/login.html
+++ b/Pages/Admin/login.html
@@ -15,7 +15,7 @@
     <div class="login-container">
       <img src="/Assets/images/Login_logo.svg" alt="Logo" />
       <h1>Admin</h1>
-      <form>
+      <form id="login-form">
         <div class="form-group">
           <div>
             <img
@@ -25,7 +25,7 @@
             />
           </div>
           <div>
-            <input type="text" placeholder="username" required />
+            <input type="text" id="email" placeholder="email" required />
           </div>
         </div>
         <div class="form-group">
@@ -34,7 +34,12 @@
             alt="password"
             class="input-icon"
           />
-          <input type="password" placeholder="password" required />
+          <input
+            type="password"
+            id="password"
+            placeholder="password"
+            required
+          />
           <img
             src="/Assets/icons/login/login_password_right.svg"
             alt="password-right"
@@ -43,6 +48,7 @@
         </div>
         <button type="submit" class="login-btn">login</button>
       </form>
+      <div id="message"></div>
     </div>
     <script src="/Scripts/Admin/login.js"></script>
   </body>
