--- a/Pages/Client/landing-page.html
+++ b/Pages/Client/landing-page.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-page</title>
     <link rel="stylesheet" href="/Styles/Client/landing-page.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
-
+    <link
+      rel="icon"
+      href="/Assets/images/logo_with_uploaded_image (1).png"
+      type="image/png"
+    />
   </head>
   <body>
-    <h1>Landing-page Page</h1>
+
+    
+
     <script src="/Scripts/Client/landing-page.js"></script>
   </body>
 </html>
