fix(U): link problem fix

--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="/Styles/Client/register.css" />
+    <link rel="stylesheet" href="../../Styles/Client/register.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
@@ -44,13 +44,13 @@
         <form>
           <div class="form-group">
             <img
-              src="/Assets/icons/Client-login/lpassword-icon.svg"
+              src="../../Assets/icons/Client-login/lpassword-icon.svg"
               alt="password"
               class="input-icon"
             />
             <input type="password" placeholder="fullname" required />
             <img
-              src="/Assets/icons/Client-login/right-icon.svg"
+              src="../../Assets/icons/Client-login/right-icon.svg"
               alt="fullname-right"
               class="input-icon"
             />
@@ -59,7 +59,7 @@
             
             <div>
               <img
-                src="/Assets/icons/Client-login/left-icon.svg"
+                src="../../Assets/icons/Client-login/left-icon.svg"
                 alt="email"
                 class="input-icon"
               />
@@ -70,24 +70,24 @@
           </div>
           <div class="form-group">
             <img
-              src="/Assets/icons/Client-login/lpassword-icon.svg"
+              src="../../Assets/icons/Client-login/lpassword-icon.svg"
               alt="password"
               class="input-icon"
             />
             <input type="password" placeholder="password" required />
             <img
-              src="/Assets/icons/Client-login/right-icon.svg"
+              src="../../Assets/icons/Client-login/right-icon.svg"
               alt="password-right"
               class="input-icon"
             />
           </div>
           <nav>
-            <a href="/Pages/Client/login.html">Do you have an account? Login here</a>
+            <a href="../Pages/Client/login.html">Do you have an account? Login here</a>
           </nav>
           <button type="submit" class="register-btn">register</button>
         </form>
       </div>
     </main>
-    <script src="/Scripts/Client/register.js"></script>
+    <script src="../../Scripts/Client/register.js"></script>
   </body>
 </html>
