Fix(U): fixed login page

--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -76,13 +76,13 @@
             />
             <input type="password" placeholder="password" required />
             <img
-              src="../../Assets/icons/Client/login/right-icon.svg"
+              src="../../Assets/icons/Client-login/right-icon.svg"
               alt="password-right"
               class="input-icon"
             />
           </div>
           <nav>
-            <a href="../Pages/Client/login.html">Do you have an account? Login here</a>
+            <a href="login.html">Do you have an account? Login here</a>
           </nav>
           <button type="submit" class="register-btn">register</button>
         </form>
