--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -4,12 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/Styles/Client/login.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
-
+    <link rel="stylesheet" href="../../Styles/Client/login.css" />
+    <link
+      rel="icon"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
+      type="image/png"
+    />
   </head>
-  <body>
-    <h1>Login Page</h1>
-    <script src="/Scripts/Client/login.js"></script>
+  <body class="bg-dark text-light">
+    <main class="client-login">
+      <div class="side-bar">
+        <figure>
+          <img
+            src="../../Assets/images/logo_with_uploaded_image (1).png"
+            alt=" filmalisaLogo"
+            class="main-logo"
+          />
+        </figure>
+
+        <nav class="logo_links">
+          <a href=""
+            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
+          </a>
+          <a href=""
+            ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
+          /></a>
+          <a href=""
+            ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
+          /></a>
+          <a href=""
+            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
+          /></a>
+        </nav>
+      </div>
+      <div class="right-part">
+        <img src="../../Assets/icons/Client-login/mainlogo.svg" alt="" />
+        <h1>filmalisa</h1>
+
+        <h2>login</h2>
+        <form>
+          <div class="form-group">
+            <div>
+              <img
+                src="../../Assets/icons/Client-login/left-icon.svg"
+                alt="username"
+                class="input-icon"
+              />
+            </div>
+            <div>
+              <input type="text" placeholder="username" required />
+            </div>
+          </div>
+          <div class="form-group">
+            <img
+              src="../../Assets/icons/Client-login/lpassword-icon.svg"
+              alt="password"
+              class="input-icon"
+            />
+            <input type="password" placeholder="password" required />
+            <img
+              src="../../Assets/icons/Client-login/right-icon.svg"
+              alt="password-right"
+              class="input-icon"
+            />
+          </div>
+          <nav >
+            <a href="./register.html">Register here</a>
+          </nav>
+
+          <button type="submit" class="login-btn">login</button>
+        </form>
+      </div>
+    </main>
+
+    <script src="../../Scripts/Client/login.js"></script>
   </body>
 </html>
