--- a/Pages/Client/landing-page.html
+++ b/Pages/Client/landing-page.html
@@ -4,17 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-page</title>
-    <link rel="stylesheet" href="/Styles/Client/landing-page.css" />
+    <link rel="stylesheet" href="../../Styles/Client/landing-page.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
   <body>
+    <header class="header">
+      <figure class="header-logo">
+        <img src="../../Assets/images/filmalisalogo.svg" alt="" />
+        <h1>filmalisa</h1>
+      </figure>
+      <nav class="header-btn">
+        <a href="./login.html">Sign in</a>
+      </nav>
+    </header>
+    <main>
+      <section class="show-section">
+        <h2>Unlimited movies, TV shows, and more</h2>
+        <p class="show-text1">Filmalisa is a movie search platform</p>
+        <p class="show-text2">
+          Ready to watch? Enter your email to create or restart your membership.
+        </p>
+        <form action="">
+          <input type="email" placeholder="Email address" />
+          <a href="./register.html" class="started-btn">Get Started ></a>
+        </form>
+      </section>
 
-    
+      <section class="enjoy-section">
+        <div>
+          <h1>Enjoy on your TV</h1>
+          <p>
+            Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+            players, and more.
+          </p>
+        </div>
+        <figure>
+          <img src="../../Assets/icons/landing-page/tv.svg" alt="tv-img" />
+        </figure>
+      </section>
 
-    <script src="/Scripts/Client/landing-page.js"></script>
+      <section>
+       
+      </section>
+    </main>
+
+    <script src="../../Scripts/Client/landing-page.js"></script>
   </body>
 </html>
