--- a/Pages/Client/home.html
+++ b/Pages/Client/home.html
@@ -71,7 +71,70 @@
           <button class="dot" data-slide="2"></button>
         </div>
       </div>
+
+      <div class="category-section">
+        <div class="category-header">
+          <p class="category-P">Action</p>
+          <div class="chevron-icon"></div>
+        </div>
+        <div class="category-card">
+          <div class="movie-card">
+            <img
+              src="/Assets/icons/user-home/image-film-1.svg"
+              alt="Wonder Woman 1984"
+              class="movie-image"
+            />
+            <div class="movie-details">
+              <span class="movie-category">Fantasy</span>
+              <p class="movie-title">Wonder Woman 1984</p>
+            </div>
+          </div>
+          <div class="movie-card">
+            <img
+              src="/Assets/icons/user-home/image-film-2.svg"
+              alt="Wonder Woman 1984"
+              class="movie-image"
+            />
+            <div class="movie-details">
+              <span class="movie-category">Fantasy</span>
+              <p class="movie-title">Zack Snyder's Justice League</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-container">
+        <div class="section-header">
+          <p class="section-title">Comedy</p>
+          <div class="direction-icon"></div>
+        </div>
+        <div class="content-container">
+          <div class="content-card">
+            <img
+              src="/Assets/icons/user-home/image-film-3.svg"
+              alt="Wonder Woman 1984"
+              class="content-image"
+            />
+            <div class="content-info">
+              <span class="content-category">Sci-Fi & Fantasy</span>
+              <p class="content-title">Game of thrones</p>
+            </div>
+          </div>
+          <div class="content-card">
+            <img
+              src="/Assets/icons/user-home/image-film-4.svg"
+              alt="Zack Snyder's Justice League"
+              class="content-image"
+            />
+            <div class="content-info">
+              <span class="content-category">Sci-Fi & Fantasy</span>
+              <p class="content-title">The Falcon and the Winter Soldier</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
     <script src="/Scripts/Client/home.js"></script>
   </body>
 </html>
