--- a/Pages/Admin/comments.html
+++ b/Pages/Admin/comments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comments</title>
-    <link rel="stylesheet" href="/Styles/Admin/comments.css" />
+    <link rel="stylesheet" href="../../Styles/Admin/comments.css" />
     <link
       rel="icon"
       href="/Assets/images/logo_with_uploaded_image (1).png"
