--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
       </nav>
     </footer>
 
-    <script src="../../Scripts/Client/landing-page.js"></script>
+    <script src="./Scripts/Client/landing-page.js"></script>
   </body>
 </html>
