--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/Styles/Admin/categories.css" />
+    <link rel="stylesheet" href="../../Styles/Admin/categories.css" />
     <link
       rel="icon"
       href="/Assets/images/logo_with_uploaded_image (1).png"
