--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -115,6 +115,7 @@
               <th class="th-border">ID</th>
               <th>Name</th>
               <th>Surname</th>
+              <th>Edit</th>
               <th class="th-border2"></th>
             </tr>
           </thead>
