--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -118,20 +118,23 @@
             <tr>
               <th class="th-border">ID</th>
               <th>Name</th>
-              <th class="th-border2"></th>
+              <th>Edit</th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody class="tbody">
             <tr>
               <td>1</td>
               <td>Action</td>
-              <td class="td-imgIcon">
+              <td>
                 <img
                   src="/Assets/icons/categories/edit-icon.png
                 "
                   alt="edit-icon"
                   class="img-icon"
                 />
+              </td>
+              <td>
                 <img
                   src="/Assets/icons/categories/remove-icon.png
                 "
