--- a/Pages/Admin/comments.html
+++ b/Pages/Admin/comments.html
@@ -114,7 +114,8 @@
               <th>Email</th>
               <th>Film</th>
               <th>Comment</th>
-              <th class="th-border2"></th>
+              <th>Search</th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody class="tbody">
@@ -138,35 +139,15 @@
                 quisquam perferendis culpa, commodi numquam dolorem
                 perspiciatis.
               </td>
-              <td class="td-imgIcon">
+              <td>
                 <img
                   src="/Assets/icons/comments/comments-zoom.png"
                   alt="zoom-icon"
                   class="img-icon"
                   onclick="showCommentModal('comment-1')"
                 />
-                <img
-                  src="/Assets/icons/categories/remove-icon.png"
-                  alt="remove-icon"
-                  class="img-icon"
-                  id="create-btn2"
-                  onclick="openRemoveModal()"
-                />
               </td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>JohnDoe</td>
-              <td>johndoe@gmail.com</td>
-              <td>Titanic</td>
-              <td id="comment-2" class="comment">sa</td>
-              <td class="td-imgIcon">
-                <img
-                  src="/Assets/icons/comments/comments-zoom.png"
-                  alt="zoom-icon"
-                  class="img-icon"
-                  onclick="showCommentModal('comment-2')"
-                />
+              <td>
                 <img
                   src="/Assets/icons/categories/remove-icon.png"
                   alt="remove-icon"
