--- a/Pages/Admin/contactus.html
+++ b/Pages/Admin/contactus.html
@@ -113,7 +113,8 @@
               <th>Username</th>
               <th>Email</th>
               <th>Reason</th>
-              <th class="th-border2"></th>
+              <th>Edit</th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody class="tbody">
@@ -136,13 +137,15 @@
                 quisquam perferendis culpa, commodi numquam dolorem
                 perspiciatis.
               </td>
-              <td class="td-imgIcon">
+              <td>
                 <img
                   src="/Assets/icons/comments/comments-zoom.png"
                   alt="zoom-icon"
                   class="img-icon"
                   onclick="showCommentModal('comment-1')"
                 />
+              </td>
+              <td>
                 <img
                   src="/Assets/icons/categories/remove-icon.png"
                   alt="remove-icon"
