--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -118,7 +118,8 @@
               <th>Overview</th>
               <th>Category</th>
               <th>IMDB</th>
-              <th class="th-border2"></th>
+              <th>Edit</th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody>
@@ -134,7 +135,7 @@
               <td>Lorem ipsum test...</td>
               <td>Action</td>
               <td>7.6</td>
-              <td class="td-imgIcon">
+              <td>
                 <img
                   src="/Assets/icons/categories/edit-icon.png"
                   alt="zoom-icon"
@@ -142,6 +143,8 @@
                   class="img-icon"
                   onclick=""
                 />
+              </td>
+              <td>
                 <img
                   src="/Assets/icons/categories/remove-icon.png"
                   alt="remove-icon"
